# pyxalign

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
.clinerules/: global.md  interactions.md
.github/workflows/: python-app.yml
docs/: api.rst  conf.py  notebook_prep.py
docs/_autosummary/: pyxalign.data_structures.xrf_projections.rst  pyxalign.data_structures.xrf_task.rst  pyxalign.enums.rst  pyxalign.gui.rst  pyxalign.io.loaders.enums.rst  pyxalign.io.loaders.pear.fold_slice_loader_2.rst  pyxalign.io.loaders.pear.options.rst  pyxalign.io.loaders.pear.rst  pyxalign.io.loaders.utils.rst  pyxalign.io.loaders.xrf.rst  pyxalign.io.rst  pyxalign.io.save.rst  pyxalign.options.alignment.rst  pyxalign.options.options.rst  pyxalign.options.projections.rst  pyxalign.options.reconstruct.rst  pyxalign.options.tests.rst
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/: conf.py  index.rst
docs/source/api/: data_structures.rst  enums.rst  gui.rst  image_utils.rst  index.rst  io.rst  options.rst
docs/source/examples/: index.rst
src/llama/: __init__.py  dev_utils.py  estimate_center.py  gpu_utils.py  gpu_wrapper.py  image_processing.py  laminogram.py  mask.py  missing_cone.py  model_functions.py  projections.py  reconstruct.py  regularization.py  task.py  test_utils.py  test_utils_2.py  timer.py  transformations.py  unwrap.py
src/llama/alignment/: base.py  cross_correlation.py  projection_matching.py
src/llama/api/: __init__.py  constants.py  enums.py  maps.py  options_utils.py  types.py
src/llama/data_structures/: laminogram.py  positions.py  projections.py  task.py  xrf_object.py  xrf_projections.py
src/llama/interactions/: mask.py
src/llama/io/: __init__.py  load.py  save.py
src/llama/plotting/: plotters.py  presets.py
src/llama/style/: text.py
src/llama/timing/: io.py  (+2 more)
src/pyxalign/: __init__.py  dev_utils.py  estimate_center.py  gpu_utils.py  gpu_wrapper.py  image_processing.py  mask.py  missing_cone.py  model_functions.py  reconstruct.py  regularization.py  test_utils.py  test_utils_2.py  unwrap.py
src/pyxalign_examples/: example_utils.py  simulated_shepp_logan_phantom_alignment.ipynb
tests/: conftest.py  demo.ipynb  demo.py
tests/demo/: demo.ipynb  demo.py
tests/development/: develop_xrf_reader.ipynb
tests/full_tests/: TP2.ipynb  TP2.py  cSAXS_e18044_LamNI_201907.ipynb  cSAXS_e18044_LamNI_201907.py  cSAXS_e18044_LamNI_201907_pma.py  cSAXS_e18044_LamNI_201907_pre_processing.py  conftest.py  data_loaders.py  loader_tests.py  xrf_data_1.py  xrf_ptycho_1.py
tests/gui_tests/: scan_removal_tool.py
tests/integration tests/: test_cross_correlation.py  test_projection_matching_alignment.py  test_reconstruction.py
tests/misc tests/: compare_gpu_wrappers.py  test_repeating_function_speed.py
tests/unit tests/: test_downsampling.py  test_fft_rotate.py  test_gpu_wrapper.py  test_io.py  test_lamni_loader.py  test_memory_pinning.py  test_set_all_device_options.py  test_shift_class.py
(+353 files in other folders)
