[project]
name = "pyxalign"
version = "0.1.0"
description = "Package for alignment and reconstruction of laminography data."
dependencies = [
    "h5py",
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "scikit-image",
    "statsmodels",
    "tqdm",
    "ipywidgets",
    "plotly",
    "ipympl",
    "tifffile",
    "PyQt5",
    "mda-xdrlib",
]
requires-python = ">=3.0"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools_scm]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools.package-data]
"pyxalign" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
