[project]
name = "pyxalign"
version = "0.1.0"
description = "Package for alignment and reconstruction of laminography data."
dependencies = [
    "h5py",
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "scikit-image",
    "statsmodels",
    "tqdm",
    "ipywidgets",
    "plotly",
    "ipympl",
    "tifffile",
    "PyQt5",
    "mda-xdrlib",
    "pyqtgraph",
    "jupyter",
    "PyYAML",
    "cupy",
    "astra-toolbox",
]
requires-python = ">=3.13"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_functions = ["test_*", "*_test"]  # Now recognizes both patterns
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-v",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools_scm]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"

[tool.ruff]
line-length = 100
target-version = "py313"

# Enable the unused import rule (F401)
select = ["F401"]  # Or use ["F"] for all pyflakes rules

# Automatically fix issues when possible
fix = true

# Exclude specific directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.setuptools.package-data]
"pyxalign" = ["py.typed"]

# Updated: Include both src and examples directories
[tool.setuptools.packages.find]
where = ["src"]
include = ["pyxalign*", "pyxalign_examples*"]